--- a/mod2site/mod2css.css
+++ b/mod2site/mod2css.css
@@ -1,30 +1,75 @@
-
-* {
+  * {
   box-sizing: border-box;
 }
 
 h1 {
-  margin-bottom: 15px;
+  color: blue; 
+  text-align:center;
 }
+.outer-div
+{
+     padding: 30px;
+     height: 200px;
+}
+.inner-div
+{
+     margin: 0 auto;
+     width: 100%; 
+     height: 100%;
+}
+
+div#container1 {
+  background-color: #bebebe;
+  border: 1px solid black;
+  position: relative;
+}
+
+div#container2 {
+  background-color: #8fc2c2 ;
+  border: 1px solid black;
+  position: relative;
+}
+
+div#container3 {
+  background-color: #c7b7c9;
+  border: 1px solid black;
+  position: relative;
+}
+
+
 p {
   border: 1px solid black;
-  background-color: #A52A2A;
-  width: 90%;
-  height: 150px;
-  margin-right: auto;
-  margin-left: auto;
+  width: 30%;
+  height: 30px;
+  margin:0;
+  padding:0;
+  position:absolute;
+  top: 0;
+  right: 0;
+  overflow:hidden;
   font-family: Helvetica;
-  color: white;
+  color: black;
+  text-align:center;
+  font-weight: 900;
+}
+
+#p1 {
+  background-color: #A52A2A;
+}
+#p2 {
+  background-color: #DEB887;
+}
+#p3 {
+  background-color: #5F9EA0;
 }
 /* Simple Responsive Framework. */
-.row {
-  width: 100%;
-}
+
+
 /********** Large devices only **********/
-@media (min-width: 1200px) {
+@media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-    border: 1px solid green;
+    
   }
   .col-lg-1 {
     width: 8.33%;
@@ -64,10 +109,10 @@ p {
   }
 }
 /********** Medium devices only **********/
-@media (min-width: 992px) and (max-width: 1199px) {
+@media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
-    border: 1px solid green;
+    
   }
   .col-md-1 {
     width: 8.33%;
@@ -106,3 +151,4 @@ p {
     width: 100%;
   }
 }
+
